put styles in file

--- a/index.html
+++ b/index.html
@@ -16,115 +16,7 @@
       property="og:description"
       content="Input a @carbon_app image containing source code, extract text and copy it"
     />
-    <style>
-      html,
-      body {
-        background: rgb(18, 18, 18);
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          Ubuntu, "Helvetica Neue", sans-serif;
-        color: #fff;
-      }
-
-      * {
-        box-sizing: border-box;
-      }
-
-      h1,
-      h4 {
-        color: rgb(248, 232, 28);
-        text-align: center;
-      }
-
-      p {
-        text-align: center;
-        max-width: 600px;
-        margin: 20px auto;
-      }
-
-      .wrapper {
-        width: 80%;
-        display: flex;
-        margin: 0 auto;
-        flex-direction: column;
-      }
-
-      .box {
-        margin: 0 auto;
-        width: 80%;
-        max-width: 1200px;
-      }
-      #target {
-        float: left;
-      }
-
-      #code-wrapper {
-        float: right;
-      }
-
-      .box > * {
-        /* flex: 1 1 0; */
-        /* flex-basis: 100%; */
-        width: calc(50% - 20px);
-        padding: 10px;
-        height: 100%;
-        min-height: 350px;
-      }
-
-      @media (max-width: 700px) {
-        .wrapper {
-          width: 100%;
-        }
-        .box {
-          flex-direction: column-reverse;
-        }
-        .box > * {
-          width: 100%;
-        }
-      }
-
-      form {
-        margin: 0 auto;
-        display: flex;
-        width: 300px;
-        border-radius: 5px;
-        border: 1px solid #fff;
-      }
-
-      a {
-        color: rgb(248, 232, 28);
-      }
-
-      form input {
-        flex: 1;
-        outline: none;
-        border: 0;
-        background: transparent;
-        padding: 10px;
-        color: #fff;
-      }
-
-      form button,
-      button {
-        border: 0;
-        border-left: 1px solid #fff;
-        background: transparent;
-        color: #fff;
-        padding: 5px 20px;
-        cursor: pointer;
-      }
-
-      #demo {
-        margin: 0 auto;
-        border: 1px solid #fff;
-        border-radius: 5px;
-        margin: 0 auto;
-        display: block;
-      }
-
-      img {
-        max-width: 100%;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Carbon Copy</h1>
